--- a/TM.DailyTrackR.View/MainWindow.xaml
+++ b/TM.DailyTrackR.View/MainWindow.xaml
@@ -91,7 +91,10 @@
                                     <DataGridTextColumn Width="*" Header="Status" Binding="{Binding StatusId}"/>
                                 </DataGrid.Columns>
                             </DataGrid>
+
                         </Grid>
+                        <Button Content="Show Project Types Pie Chart" Click="ShowPieChartWindow" />
+
                     </StackPanel>
                 </TabItem>
                 <TabItem Header="Overview">
@@ -110,7 +113,6 @@
                             </DataGrid>
                         </Grid>
                         <DockPanel>
-                            <!-- Szöveg és Border a DockPanel tetején -->
                             <StackPanel DockPanel.Dock="Top" Margin="10">
                                 <TextBlock Margin="10">Export activity in</TextBlock>
                                 <Border BorderBrush="Black" BorderThickness="1" CornerRadius="5" Padding="5">
@@ -118,7 +120,6 @@
                                 </Border>
                             </StackPanel>
 
-                            <!-- Grid a DockPanel közepén -->
                             <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Left" Margin="10">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
@@ -126,10 +127,8 @@
                                         <ColumnDefinition Width="2*"/>
                                     </Grid.ColumnDefinitions>
 
-                                    <!-- Bal oldal: Calendar -->
                                     <Calendar x:Name="SelectorCalendar" SelectionMode="MultipleRange" SelectedDatesChanged="SelectedDatesChanged"/>
 
-                                    <!-- Jobb oldal: Letöltési gombok -->
                                     <StackPanel Grid.Column="1" Orientation="Vertical" Margin="10">
                                         <Button Width="35" Height="35" Click="ExportToFile" VerticalAlignment="Top" Content="⬇️" FontSize="18" FontWeight="Bold" HorizontalAlignment="Left" Margin="5"/>
                                         <Button Width="120" Height="35" Click="ExportToCsv" VerticalAlignment="Top" Content="Export to CSV" FontSize="14" FontWeight="Bold" Margin="5"/>
